# crm_varejo_alimenticio

./: .gitignore  README.md  pyproject.toml
crm_varejo_alimenticio/: eda_bivariada.ipynb  eda_lib.py  hipoteses_lib.py  ml.ipynb  odds_ratio.ipynb  regressao_log_lib.py
md/: dicionario_dados.md  eda_conclusoes.md
