[tool.poetry]
name = "crm-varejo-alimenticio"
version = "0.1.0"
description = ""
authors = ["Alexandre Andreo <alexandre.andreo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^3.0.2"
matplotlib = "^3.10.9"
seaborn = "^0.13.2"
numpy = "^2.4.4"
ipykernel = "^7.2.0"
scipy = "^1.17.1"
scikit-learn = "^1.8.0"
statsmodels = "^0.14.6"
pingouin = "^0.6.1"
scikit-posthocs = "^0.13.0"
jinja2 = "^3.1.6"
xgboost = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
